<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FenceIt</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_action">Search</string>
    <string name="description_save">Save</string>
    <string name="description_separator">Separator</string>
    <string name="button_save">Save</string>
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btn_toggle_enabled">Enabled</string>
    <string name="btn_toggle_disabled">Disabled</string>
    <string name="default_alarm_name">Alarm Name</string>
    <string name="alarm_set_name_description">Set the name of this alarm.</string>
    <string name="triggers">Triggers</string>
    <string name="trigger_add">Add a new Trigger</string>
    <string name="trigger_triggered_enter">Arrived at</string>
    <string name="trigger_triggered_exit">Left</string>
    <string name="actions">Actions</string>
    <string name="action_add">Add a new Action</string>
    <string name="notification_no_message">&lt;No message for notification&gt;</string>
    <string name="notification_type_desc">Notification Action</string>
    <string name="notification_set_message_title">Set a message</string>

    <string-array name="trigger_types">
        <item>Arriving</item>
        <item>Leaving</item>
    </string-array>

    <string name="dialog_new_trigger">Locate using</string>
    <string name="dialog_new_action">Action type</string>

    <string-array name="location_types">
        <item>Connected Wi-Fi</item>
        <item>Detected Wi-Fis</item>
        <item>Cellular Network</item>
        <item>Geographical Position</item>
    </string-array>
    <string-array name="location_types_favorite">
        <item>Connected Wi-Fi</item>
        <item>Detected Wi-Fis</item>
        <item>Cellular Network</item>
        <item>Geographical Position</item>
        <item>Existing favorite location</item>
    </string-array>

    <string name="location_type_cell">Cellular Network Location</string>
    <string name="dialog_enable_wifi_title">Wi-Fi Interface not enabled</string>
    <string name="dialog_enable_cell_title">Mobile Network Interface not enabled</string>
    <string name="dialog_enable_wifi_message">The Wi-Fi interface doesn\'t seem to be enabled. Would you like to enable it now?</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="wific_location_bssid">Matching on BSSID</string>
    <string name="wific_location_ssid">Matching on SSID</string>
    <string name="location_click_refresh">Click on the refresh button.</string>
    <string name="location_favorite_only">The location can only be favorite, as it is created from the Locations Panel.</string>
    <string name="general_ok">OK</string>
    <string name="dialog_location_name_message">Set the location name:</string>
    <string name="dialog_location_name_title">New Location Name</string>
    <string name="undone_success">Changes undone!</string>
    <string name="location_save_incomplete_fields">Cannot save location due to missing contextual information. Please refresh the data!</string>
    <string name="location_connected_wifi_title">CONNECTED WI-FI NETWORK</string>
    <string name="general_refresh">Touch to gather new info</string>
    <string name="location_connected_wifi_bssid">BSSID:</string>
    <string name="location_connected_wifi_ssid">Name:</string>
    <string name="location_connected_wifi_mac">MAC Address:</string>
    <string name="location_connected_wifi_status">Status:</string>
    <string name="location_settings">SETTINGS</string>
    <string name="default_text">Default text</string>
    <string name="location_connected_wifi_match_section">Touch to change how locations are compared.</string>
    <string name="location_detected_wifis_title">DETECTED WI-FI NETWORKS</string>
    <string name="location_detected_wifis_bssid">BSSID:</string>
    <string name="location_detected_wifis_ssid">Name:</string>
    <string name="dialog_enable_cell_message">The device does not seem to be connected to any mobile phone networks. Would you like to adjust the settings now?</string>
    <string name="location_cell_title">CELLULAR NETWORK INFO</string>
    <string name="location_cell_operator">Operator:</string>
    <string name="location_cell_cellId">Cellular ID:</string>
    <string name="error_acquiring_data">Error acquiring data</string>
    <string name="location_cell_error_message">An error has occurred while acquiring data from the mobile network interface. Please check that your device is properly connected to a mobile network and try again.</string>
    <string name="location_geo_title">GEO COORDINATES</string>
    <string name="location_geo_latitude">Latitude:</string>
    <string name="location_geo_longitude">Longitude:</string>
    <string name="location_geo_extra">Extra:</string>
    <string name="location_geo_view_map">View Map</string>
    <string name="location_geo_activation_radius">Activation radius: %d m</string>
    <string name="location_geo_activation_radius_hint">Touch to set the radius of the surface considered as part of the location, from the selected position.</string>
    <string name="action_notification_message">Notification Message</string>
    <string name="notification_action_message_hint">Touch to set a message for this notification.</string>
    <string name="action_ringer_mode_type">Touch to set new Volume Mode</string>
    <string name="location_name_hint">Touch to set the name of this location.</string>
    <string name="location_favorite_hint_off">Touch to save as favorite</string>
    <string name="location_favorite_hint_on">Saved as favorite</string>
    <string name="location_favorite_noname">&lt;i&gt;Anonymous Location&lt;/i&gt;</string>
    <string name="action_ringer_mode_hint">Touch to set the target volume mode.</string>
    <string name="sys_notification_trigger_reason">%s</string>
    <string name="sys_notification_triggered_title">Alarm triggered - %s</string>
    <string name="sys_notification_ongoing_title">FenceIt - Active Alarms</string>
    <string name="location_geo_map_marker_snippet">Latitude: %1$.4f \n Longitude: %2$.4f</string>

    <string-array name="action_types">
        <item>Play notification alarm</item>
        <item>Change the volume mode</item>
    </string-array>

    <string name="location_geo_map_marker_title">Location\'s Position</string>

    <string name="location_geo_view_map_hint">Touch to view or set position on map.</string>

    <string name="alarm_disableOnTrigger_description">Touch to set whether this alarm is automatically disabled when triggered.</string>
    <string name="alarm_disableOnTrigger_disable">Disable when triggered</string>
    <string name="alarm_disableOnTrigger_keep">Keep enabled when triggered</string>

</resources>