<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_padding" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/SectionHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/SectionHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/location_cell_title" />

            <ImageButton
                android:id="@+id/cell.refreshButton"
                style="@style/LocationRefreshButton"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/general_refresh" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/inner_padding" >

            <TextView
                android:id="@+id/cell.operatorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/location_cell_operator"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/cell.cellIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/cell.operatorLabel"
                android:text="@string/location_cell_cellId"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/cell.operatorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/cell.operatorLabel"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/cell.operatorLabel"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/cell.cellIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/cell.cellIdLabel"
                android:layout_alignLeft="@+id/cell.operatorText"
                android:text="@string/default_text" />
        </RelativeLayout>

        <TextView
            style="@style/SectionHeaderText.SingleView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_settings" />

        <include layout="@layout/location_common_settings" />
    </LinearLayout>

</ScrollView>