<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:padding="@dimen/activity_padding" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/SectionHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/SectionHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/location_geo_title" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" >

                <ImageButton
                    android:id="@+id/coordinates.refreshButton"
                    style="@style/LocationRefreshButton"
                    android:contentDescription="@string/general_refresh" />

                <ProgressBar
                    android:id="@+id/coordinates.progressBar"
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:visibility="invisible" />
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size" >

            <TextView
                android:id="@+id/coordinates.latLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/inner_padding"
                android:text="@string/location_geo_latitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/coordinates.longLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/coordinates.latLabel"
                android:text="@string/location_geo_longitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/coordinates.extraLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/coordinates.longLabel"
                android:text="@string/location_geo_extra"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/coordinates.latText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/coordinates.latLabel"
                android:layout_marginLeft="28dp"
                android:layout_toRightOf="@+id/coordinates.latLabel"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/coordinates.longText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/coordinates.longLabel"
                android:layout_alignLeft="@+id/coordinates.latText"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/coordinates.extraText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/coordinates.extraLabel"
                android:layout_alignLeft="@+id/coordinates.latText"
                android:text="@string/default_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/coordinates.mapSection"
            android:layout_marginTop="5dp"
            style="@style/SettingItem.BothBorders"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/coordinates.mapImage"
                android:layout_width="25dp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_location_geo_map" />

            <TextView
                android:id="@+id/coordinates.mapTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_toRightOf="@+id/coordinates.mapImage"
                android:text="@string/location_geo_view_map"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:layout_alignLeft="@+id/coordinates.mapTitle"
                android:layout_below="@+id/coordinates.mapTitle"
                android:text="@string/location_geo_view_map_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <TextView
            style="@style/SectionHeaderText.SingleView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_settings" />

        <LinearLayout
            android:id="@+id/coordinates.radiusSection"
            style="@style/SettingItem"
            android:layout_width="fill_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/coordinates.radiusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_geo_activation_radius"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:text="@string/location_geo_activation_radius_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <include layout="@layout/location_common_settings" />
    </LinearLayout>

</ScrollView>